--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-<title>JO Home</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="apple-mobile-web-app-title" content="<?php bloginfo('name'); ?>">
+<meta name="viewport" content="width=device-width, minimal-ui, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+<title></title>
+<link rel="stylesheet" href="css/styles.css" type="text/css" media="screen">
 <script data-main="js/main" src="js/libs/require/require.js"></script>
 </head>
 <body>
-
-<a href="#"></a>
-
+    <!--[if IE 7]>
+        You are using outdate browsers, please update your browsers and continue to view the website.
+        <script src="//letskillie6.googlecode.com/svn/trunk/2/default.js"></script>
+    <![endif]-->
 </body>
 </html>
