--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, minimal-ui, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 <title></title>
 <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen">
-<script data-main="js/main" src="js/libs/require/require.js"></script>
+<script data-main="js/config" src="js/libs/require/require.js"></script>
 </head>
 <body>
     <!--[if IE 7]>
