--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,10 @@
 <script data-main="js/app" src="js/libs/requirejs/require.js"></script>
 </head>
 <body>
-    <!--[if IE 7]>
+    <!--[if lte IE 8]>
         You are using outdate browsers, please update your browsers and continue to view the website.
         <script src="//letskillie6.googlecode.com/svn/trunk/2/default.js"></script>
     <![endif]-->
+    <div class="test">hello</div>
 </body>
 </html>
