--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, minimal-ui, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title></title>
 <link rel="stylesheet" href="css/styles.css" type="text/css" media="screen">
-<script data-main="js/app" src="js/libs/requirejs/require.js"></script>
+<script data-main="js/common" src="js/libs/requirejs/require.js"></script>
 </head>
 <body>
     <!--[if lte IE 8]>
